--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "name": "Python: Django",
             "type": "python",
-            //"python": "~/.pip/envs/djg/bin/python",
+            //"python": "~/.pip/venv/djg/bin/python",
             "python": "/home/myusrn/.pip/venv/djg/bin/python",
             "request": "launch",
             "program": "${workspaceFolder}/manage.py",
