--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,4 @@ services:
     #   - "8000:8000"
     env_file:
       - .env.dev
-    # command: tail -f /dev/null
+    command: tail -f /dev/null
