--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
 // https://github.com/microsoft/vscode-dev-containers/tree/v0.241.1/containers/docker-existing-dockerfile
+// see https://code.visualstudio.com/docs/remote/containers and https://code.visualstudio.com/docs/remote/containers-tutorial
 {
 	"name": "Existing Dockerfile",
 
